# pprs_lab

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: xarm6_default_kinematics.yaml
launch/: pprs_ufactory.launch.py  pprs_ufactory_gz.launch.py  pprs_ufactory_moveit_gz.launch.py
pprs_lab_realsense/: CMakeLists.txt  README.md  package.xml
pprs_lab_realsense/config/: rviz_config_1.rviz
pprs_lab_realsense/doc/: realsense_pointcloud2.txt
pprs_lab_realsense/launch/: realsense.launch.py
pprs_lab_realsense/py-scripts/: realsense_tut_1ANI.py  realsense_tut_2.py  realsense_tut_6.py  rs_app.py
pprs_lab_realsense/src/: opencv_example_1.cpp  pcl_example_1.cpp  pcl_filtering_example_1.cpp  pcl_filtering_example_2.cpp  pcl_yt_example_1.cpp  rs_example_1.cpp
pprs_ufactory_moveit/: CMakeLists.txt  package.xml
pprs_ufactory_moveit/launch/: moveit_robot_program.launch.py
pprs_ufactory_moveit/scripts/: camera_viewer.py
pprs_ufactory_moveit/src/: moveit_robot_program.cpp  my_moveit_utils.cpp
pprs_ufactory_sim/: CMakeLists.txt  package.xml
pprs_ufactory_sim/launch/: _pprs_ufactory.launch.py  pprs_ufactory_gz.launch.py  pprs_ufactory_moveit_gz.launch.py
pprs_ufactory_sim/models/Intel RealSense D435/: model.sdf
pprs_ufactory_sim/models/PingPong_Ball/: model.config  model.sdf
pprs_ufactory_sim/models/Robot_Table/: model.config  model.sdf
pprs_ufactory_sim/worlds/: pprs_world.sdf
worlds/: pprs_world.sdf
xarm_teleop/: package.xml  requirements.txt  setup.py
xarm_teleop/xarm_teleop/: teleop_controller_stadia.py  teleop_keyboard.py  xarm-test.py
